--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -19,6 +19,16 @@
 
     <footer>
       <div class="row">
+        <div class="large-6 large-centered columns">
+        <center><h3>Thank you for visiting!</h3></center>
+        </div>
+      </row>
+      <div class="row">
+        <div class="large-6 large-centered columns">
+          <center><img src="assets/img/monicapowelllogo.svg" width=150></center>
+        </div>
+      </row>
+      <div class="row">
           <div class="large-12 columns">
             © Monica Powell 2017
            </div>
