added color inspiration file, added footer language and draft nav copy

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -147,6 +147,29 @@ a.logo-link {
     border-bottom: none;
 }
 
-// ul li{
-//   display:inline-block;
-// }
+i.fa.fa-heart, i.fa.fa-code {
+    color: #625968;
+}
+
+
+.topnav {
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    display: block;
+    color: #615868;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    border-bottom: none;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
