--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -7,9 +7,10 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monica Powell - Web Developer</title>
+    <script src="https://use.fontawesome.com/594c178d6e.js"></script>
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <script src="https://use.fontawesome.com/594c178d6e.js"></script>
+
 
   </head>
   <body>
@@ -29,8 +30,10 @@
         </div>
       </row>
       <div class="row">
+
           <div class="large-12 columns">
-            © Monica Powell 2017
+        Made with <i class="fa fa-heart" aria-hidden="true"></i> &amp; <i class="fa fa-code" aria-hidden="true"></i>
+ in Brooklyn &nbsp;    © Monica Powell, 2017
            </div>
       </div>
    </footer>
