--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -19,22 +19,46 @@
     {{> body}}
 
     <footer>
-      <div class="row">
-        <div class="large-6 large-centered columns">
-        <center><h3>Thank you for visiting!</h3></center>
-        </div>
-      </row>
-      <div class="row">
+
+
+
+
+      <br>
+
+      <!-- <div class="row">
         <div class="large-6 large-centered columns">
           <center><img src="assets/img/monicapowelllogo.svg" width=150></center>
         </div>
-      </row>
-      <div class="row">
+      </div> -->
+      <div class="row" id="credits">
 
           <div class="large-12 columns">
+            <center>
+
+
+            <a href="https://github.com/m0nica" target="_blank"> <i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+
+<a href="https://www.linkedin.com/in/monicampowell">
+<i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+
+<a href="https://medium.com/@monica_">
+<i class="fa fa-medium fa-3x" aria-hidden="true"></i></a>
+
+<a href="https://twitter.com/waterproofheart">
+<i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+
+<br>
+
+
         Made with <i class="fa fa-heart" aria-hidden="true"></i> &amp; <i class="fa fa-code" aria-hidden="true"></i>
- in Brooklyn &nbsp;    © Monica Powell, 2017
+ in Brooklyn <br>   © Monica Powell, 2017
+
+ </center>
            </div>
+
+
+
+
       </div>
    </footer>
     <script src="{{root}}assets/js/app.js"></script>
