--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -7,11 +7,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monica Powell - Web Developer</title>
-    <script src="https://use.fontawesome.com/594c178d6e.js"></script>
-    <link rel="stylesheet" href="{{root}}assets/css/app.css">
+    <!-- <script src="https://use.fontawesome.com/594c178d6e.js"></script> -->
+           <script defer src="{{root}}assets/js/fontawesome/fontawesome-all.js"></script>
+
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paradeiser/0.4.2/min/paradeiser.min.css">
+        <link rel="stylesheet" href="{{root}}assets/css/app.css">
   </head>
   <body>
 
