--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -56,6 +56,7 @@ body {
   background-color: rgba(208, 189, 196, 0.33);
   font-family: 'Lato', sans-serif;
   color: #353530;
+  font-size: 18px;
 
 }
 
@@ -180,7 +181,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.4rem;
+  font-size: 1.9rem;
   color: #615868;
   background-size: 1px 1em;
 
