--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -37,22 +37,28 @@
             <center>
 
 
-            <a href="https://github.com/m0nica" target="_blank"> <i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+            <a href="https://github.com/m0nica" target="_blank"> <i class="fab fa-github fa-2x social" aria-hidden="true"></i></a>
+
+&nbsp;
 
 <a href="https://www.linkedin.com/in/monicampowell">
-<i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+<i class="fab fa-linkedin-in fa-2x social" aria-hidden="true"></i></a>
+
+&nbsp;
 
 <a href="https://medium.com/@monica_">
-<i class="fa fa-medium fa-3x" aria-hidden="true"></i></a>
+<i class="fab fa-medium-m fa-2x social" aria-hidden="true"></i></a>
+
+&nbsp;
 
 <a href="https://twitter.com/waterproofheart">
-<i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+<i class="fab fa-twitter fa-2x social" aria-hidden="true"></i></a>
 
 <br>
 
 
         Made with <i class="fa fa-heart" aria-hidden="true"></i> &amp; <i class="fa fa-code" aria-hidden="true"></i>
- in Brooklyn <br>   © Monica Powell, 2017
+ in Brooklyn, New York <br>   © Monica Powell, 2017
 
  </center>
            </div>
