--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -11,8 +11,19 @@
            <script defer src="{{root}}assets/js/fontawesome/fontawesome-all.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paradeiser/0.4.2/min/paradeiser.min.css">
-        <link rel="stylesheet" href="{{root}}assets/css/app.css">
+    <link rel="stylesheet" href="{{root}}assets/css/app.css">
+    <link rel="stylesheet" href="{{root}}assets/css/bttn.min.css">
+
+    <!-- jQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+
+  <!-- fotorama.css & fotorama.js. -->
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.css" rel="stylesheet">
+  <!-- 3 KB -->
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.js"></script>
+  <!-- 16 KB -->
   </head>
   <body>
 
@@ -33,6 +44,7 @@
       </div> -->
       <div class="row" id="credits">
 
+
           <div class="large-12 columns">
             <center>
 
@@ -51,8 +63,10 @@
 
 &nbsp;
 
-<a href="https://twitter.com/waterproofheart">
-<i class="fab fa-twitter fa-2x social" aria-hidden="true"></i></a>
+
+
+<a href="mailto:monica@aboutmonica.com">
+  <i class="far fa-envelope fa-2x social" aria-hidden="true"></i></a>
 
 <br>
 
