--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -360,6 +360,33 @@ a.button:hover {
     background-color: #ffffff5e;
     padding: .1em;
   }
+
+/* display progress bar at the boom of page */
+  .progressContainer {
+  left:0;
+  width: 100%;
+  height: 0.4em;
+  margin-bottom: 0px;
+  position: fixed;
+  bottom: 0px;
+  overflow: hidden;
+  background-color: white;
+  content: "";
+	display: table;
+	table-layout: fixed;
+}
+
+.progressBar {
+  width: 0%;
+  float: left;
+  height: 100%;
+  z-index:99;
+  max-width: 100%;
+  background-color:#605767;
+  -webkit-transition: width .6s ease;
+  -o-transition: width .6s ease;
+  transition: width .6s ease;
+}
 /* debugging ghost elements */
 // * {
 //   background: #000 !important;
