future-proofed footer year

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -76,7 +76,13 @@
 
 
         Made with <i class="fa fa-heart" aria-hidden="true"></i> &amp; <i class="fa fa-code" aria-hidden="true"></i>
- in Brooklyn, New York <br>   © Monica Powell, 2017
+ in Brooklyn, New York <br>   © Monica Powell,
+
+<!-- get current year for footer -->
+ <script type="text/javascript">
+  document.write(new Date().getFullYear());
+</script>
+
 
  </center>
            </div>
