added og:image to load in previews of the website

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -7,6 +7,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monica Powell - Web Developer</title>
+    <meta property="og:image" content="http://aboutmonica.com/assets/img/about-monica-preview-1.png"> 
+    
     <!-- <script src="https://use.fontawesome.com/594c178d6e.js"></script> -->
            <script defer src="{{root}}assets/js/fontawesome/fontawesome-all.js"></script>
 
