comment unecessary console.logs

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -101,9 +101,9 @@
     $(window).load(function(){
 $(window).scroll(function() {
   var wintop = $(window).scrollTop(), docheight = $('body').height(), winheight = $(window).height();
-  console.log(wintop);
+ // console.log(wintop);
   var totalScroll = (wintop/(docheight-winheight))*100;
-  console.log("total scroll" + totalScroll);
+  // console.log("total scroll" + totalScroll);
   $(".progressBar").css("width",totalScroll+"%");
 });
 
