update css display and remove old comments

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -112,9 +112,9 @@
    {
 $(window).scroll(function() {
         var wintop = $(window).scrollTop(), docheight = $('body').height(), winheight = $(window).height();
-      console.log(wintop);
+     // console.log(wintop);
         var totalScroll = (wintop/(docheight-winheight))*100;
-       console.log("total scroll" + totalScroll);
+       // console.log("total scroll" + totalScroll);
         $(".progressBar").css("width",totalScroll+"%");
 });
 
