--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -367,7 +367,7 @@ a.button:hover {
   overflow: hidden;
   background-color: white;
   content: "";
-  display: table;
+  display: block;
   table-layout: fixed;
 }
 
