--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -54,9 +54,9 @@
 
         
         
-          <img src="assets/img/creativity-quote.svg" alt="You can't use up creativity. The more you use, the more you have." class="design-quote">
+          <img src="assets/img/creativity-quote.svg" alt="You can't use up creativity. The more you use, the more you have." class="creative-quote">
         
-       <p class="design-quote">
+       <p class="creative-quote">
           ― Dr. Maya Angelou
         </p>
 
