update nav + footer, add dev.to icon, move linkedin, etc.

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -115,7 +115,7 @@ ul {
   overflow: hidden;
 }
 
-nav .fa-twitter path,
+nav .fa-linkedin-in path,
 nav .fa-github path,
 nav .fa-browser path,
 nav .fa-file path,
