--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -76,8 +76,21 @@
 
 <a href="https://medium.com/@monica_">
 <i class="fab fa-medium-m fa-2x social" aria-hidden="true"></i></a>
+&nbsp;
+
+
+
+
+<a href="https://dev.to/m0nica">
+  <i class="fab fa-dev fa-2x social" aria-hidden="true"></i></a>
 
 &nbsp;
+
+<a href="https://twitter.com/waterproofheart">
+  <i class="fab fa-twitter fa-2x social" aria-hidden="true"></i></a>
+
+&nbsp;
+
 
 
 
@@ -89,6 +102,7 @@
 
         Made with <i class="fa fa-heart" aria-hidden="true"></i> &amp; <i class="fa fa-code" aria-hidden="true"></i>
  in Brooklyn, New York <br>   © Monica Powell,
+
 
 <!-- get current year for footer -->
  <script type="text/javascript">
